@@ -1,3 +1,11 @@
+2003-01-18  Jochen Wiedmann  <joe@ispsoft.de> (2.1023)
+
+	* Remove compiler warnings
+	  Fix some small issues to get it to work with MySQL 4.1
+	  (Mostly checking return values from MySQL API functions)
+	  Michael Widenius  <monty@mysql.com> (2.1022a)
+
+
 2003-01-03  Jochen Wiedmann  <joe@ispsoft.de> (2.1022)
 
 	* Added hints to Randy Kobes PPM repository, because
